[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.4 patchlevel 5                                 ??? ??,  2012

Major Changes:

 * The experimental --enable-ssl_slave option for configure allows
   persistant SSL connections that won't get booted when the mush
   restarts. Requires libevent v2.X. [SW]

Commands:
 * @edit/quiet edits attributes, but doesn't spam you with the modified
   values, just gives you a count of modified attributes. Suggested by
   Padraic. [MG]
 * You can now have more than one command (with the action list enclosed in
   {curly braces}) in the rhs arg of @force/noeval. [MG]
 * @ps/debug <pid> will display extra information about a queue entry's
   evaluation environment. [SW]

Powers:
 * can_dark power lets non-wizard players set themselves dark. Suggested by 
   AnneLions. [GM]

Minor Changes:
 * ansi_string has been rewritten to be much faster for non-marked up
   strings, to take up considerably less memory, and has received general
   all-around improvements in speed. Rewrite is in preparation for
   256 color and 24 bit color ansi. [GM]
 * ansi_string no longer optimizes markup. In some pathological cases,
   buffer_len will be hit much earlier than it used to be. Use ansi()
   with wisdom! [GM]
 * @edit no longer shows the full value of attributes which aren't edited,
   it just shows that they are unchanged. Suggested by Minion. [MG]
 * @mail now shows the dbref of the sender for mail from non-players.
   Suggested by Minion. [MG]
 * Fix a potential buffer overflow in prefix table code. [SW]
 * "enter <exit>" now works the same as "goto". Suggested bt [GM]. [MG]

Fixes:
 * No_Pay was implicit if executor is #1, but was _not_ implicit if 
   Owner(executor) was #1. Caused some obscure queue cost bugs.
   Discovered by Padraic@M*U*S*H. [GM]
 * %$-subs didn't work inside @switch's default case. Patch by Covenent.